# interview_practice

./: .gitignore  CMakeLists.txt  README.md
leetcode/array/: CMakeLists.txt  beautiful-arrangement-ii.cpp  can-place-flowers.cpp  candy-crush.cpp  container-with-most-water.cpp  contains-duplicate-ii.cpp  contains-duplicate-iii.cpp  contiguous-array.cpp  continuous-subarray-sum.cpp  daily-temperatures.cpp  evaluate-reverse-polish-notation.cpp  find-all-duplicates-in-an-array.cpp  find-all-numbers-disappeared-in-an-array.cpp  find-anagram-mappings.cpp  find-peak-element.cpp  find-the-celebrity.cpp  first-missing-positive.cpp  flatten-nested-list-iterator.cpp  flipping-an-image.cpp  game-of-life.cpp  h-index-ii.cpp  h-index.cpp  increasing-triplet-subsequence.cpp  insert-interval.cpp  k-diff-pairs-in-an-array.cpp  k-empty-slots.cpp  kth-largest-element-in-an-array.cpp  largest-number-at-least-twice-of-others.cpp  largest-rectangle-in-histogram.cpp  longest-mountain-in-array.cpp  magic-squares-in-grid.cpp  majority-element.cpp  max-consecutive-ones-ii.cpp  max-consecutive-ones.cpp  maximize-distance-to-closest-person.cpp  maximum-average-subarray-i.cpp  maximum-average-subarray-ii.cpp  maximum-product-of-three-numbers.cpp  maximum-product-of-word-lengths.cpp  maximum-product-subarray.cpp  (+43 more)
leetcode/backtracking/: CMakeLists.txt  additive-number.cpp  beautiful-arrangement.cpp  combination-sum-ii.cpp  combination-sum-iii.cpp  combination-sum-iv.cpp  combination-sum.cpp  combinations.cpp  expression-add-operators.cpp  generate-parentheses.cpp  n-queens-ii.cpp  n-queens.cpp  permutations-ii.cpp  permutations.cpp  restore-ip-addresses.cpp  subsets-ii.cpp  subsets.cpp  sudoku-solver.cpp  valid-sudoku.cpp  word-search.cpp
leetcode/bfs/: CMakeLists.txt  max-area-of-island.cpp  minesweeper.cpp  number-of-islands.cpp  surrounded-regions.cpp  the-maze-ii.cpp  the-maze.cpp  word-ladder.cpp
leetcode/binary-indexed-tree/: CMakeLists.txt  count-of-smaller-numbers-after-self.cpp
leetcode/binary-search/: CMakeLists.txt  divide-two-integers.cpp  find-first-and-last-position-of-element-in-sorted-array.cpp  powerx-n.cpp  search-in-rotated-sorted-array-ii.cpp  search-in-rotated-sorted-array.cpp  search-insert-position.cpp  sqrt.cpp  valid-perfect-square.cpp
leetcode/design/: CMakeLists.txt  design-compressed-string-iterator.cpp  design-hit-counter.cpp  design-phone-directory.cpp  design-tic-tac-toe.cpp  encode-and-decode-tinyurl.cpp  exam-room.cpp  flatten-2d-vector.cpp  implement-queue-using-fixed-size-array.cpp  insert-delete-getrandom-o1-duplicates-allowed.cpp  insert-delete-getrandom-o1.cpp  lfu-cache.cpp  logger-rate-limiter.cpp  lru-cache.cpp  moving-average-from-data-stream.cpp  my-calendar-i.cpp  my-calendar-ii.cpp  read-n-characters-given-read4-ii-call-multiple-times.cpp  read-n-characters-given-read4.cpp  shortest-word-distance-ii.cpp  shuffle-an-array.cpp
leetcode/dfs/: CMakeLists.txt  decode-string.cpp  nested-list-weight-sum-ii.cpp  nested-list-weight-sum.cpp
leetcode/divide-and-conquer/: CMakeLists.txt  different-ways-to-add-parentheses.cpp  the-skyline-problem.cpp
leetcode/dynamic-programming/: 01-matrix.cpp  2-keys-keyboard.cpp  4-keys-keyboard.cpp  CMakeLists.txt  best-time-to-buy-and-sell-stock-ii.cpp  best-time-to-buy-and-sell-stock-iii.cpp  best-time-to-buy-and-sell-stock-iv.cpp  best-time-to-buy-and-sell-stock-with-cooldown.cpp  best-time-to-buy-and-sell-stock-with-transaction-fee.cpp  best-time-to-buy-and-sell-stock.cpp  climbing-stairs.cpp  coin-change.cpp  decode-ways.cpp  gas-station-iii.cpp  house-robber-ii.cpp  house-robber.cpp  longest-continuous-increasing-subsequence.cpp  longest-increasing-subsequence.cpp  longest-line-of-consecutive-one-in-matrix.cpp  longest-palindromic-subsequence.cpp  longest-palindromic-substring.cpp  paint-fence.cpp  paint-house.cpp  palindromic-substrings.cpp  partition-equal-subset-sum.cpp  perfect-squares.cpp  target-sum.cpp  triangle.cpp  ugly-number-ii.cpp  ugly-number.cpp  unique-paths-ii.cpp  unique-paths.cpp  word-break.cpp
leetcode/graph/: CMakeLists.txt  alien-dictionary-ii.cpp  alien-dictionary.cpp  cheapest-flights-within-k-stops.cpp  clone-graph.cpp  course-schedule-ii.cpp  course-schedule.cpp  evaluate-division.cpp  graph-valid-tree.cpp  is-graph-bipartite.cpp  minimum-height-trees.cpp  number-of-connected-components-in-an-undirected-graph.cpp  possible-bipartition.cpp  reconstruct-itinerary.cpp  redundant-connection-ii.cpp  redundant-connection.cpp  sequence-reconstruction.cpp
leetcode/greedy/: CMakeLists.txt  candy.cpp  find-permutation.cpp  gas-station-ii.cpp  gas-station.cpp  jump-game-ii.cpp  jump-game.cpp  meeting-rooms-ii.cpp  meeting-rooms.cpp  minimum-cost-to-hire-k-workers.cpp  minimum-number-of-arrows-to-burst-balloons.cpp  non-overlapping-intervals.cpp  queue-reconstruction-by-height.cpp  remove-duplicate-letters.cpp  task-scheduler.cpp
leetcode/heap/: CMakeLists.txt  employee-free-time.cpp  find-median-from-data-stream.cpp  kth-largest-element-in-a-stream.cpp  kth-smallest-element-in-a-sorted-matrix.cpp
leetcode/linked-list/: CMakeLists.txt  add-two-numbers-ii.cpp  add-two-numbers.cpp  convert-sorted-list-to-bst.cpp  copy-list-with-random-pointer.cpp  insert-into-a-cyclic-sorted-list.cpp  insertion-sort-list.cpp  intersection-of-two-linked-lists.cpp  linked-list-components.cpp  linked-list-cycle-ii.cpp  linked-list-cycle.cpp  merge-2-sorted-lists.cpp  merge-k-sorted-lists.cpp  odd-even-linked-list.cpp  palindrome-linked-list.cpp  partition-list.cpp  plus-one-linked-list.cpp  remove-duplicates-from-sorted-list-ii.cpp  remove-duplicates-from-sorted-list.cpp  remove-linked-list-elements.cpp  remove-nth-node-from-end-of-list.cpp  reorder-list.cpp  reverse-linked-list.cpp  rotate-list.cpp  split-linked-list-in-parts.cpp  swap-nodes-in-pairs.cpp
leetcode/matrix/: CMakeLists.txt  brick-wall.cpp  diagonal-traverse.cpp  escape-the-ghosts.cpp  island-perimeter.cpp  lonely-pixel-i.cpp  lonely-pixel-ii.cpp  number-of-corner-rectangles.cpp  rotate-image.cpp  search-a-2d-matrix-ii.cpp  search-a-2d-matrix.cpp  (+1 more)
(+75 files in other folders)
