cmake_minimum_required(VERSION 3.12)

project(Interview_Practice LANGUAGES C CXX)
set (CMAKE_CXX_STANDARD 11)

add_subdirectory(leetcode/array)
add_subdirectory(leetcode/backtracking)
add_subdirectory(leetcode/bfs)
add_subdirectory(leetcode/binary-indexed-tree)
add_subdirectory(leetcode/binary-search)
add_subdirectory(leetcode/common)
add_subdirectory(leetcode/design)
add_subdirectory(leetcode/dfs)
add_subdirectory(leetcode/divide-and-conquer)
add_subdirectory(leetcode/dynamic-programming)
add_subdirectory(leetcode/graph)
add_subdirectory(leetcode/greedy)
add_subdirectory(leetcode/heap)
add_subdirectory(leetcode/linked-list)
add_subdirectory(leetcode/math)
add_subdirectory(leetcode/matrix)
add_subdirectory(leetcode/sampling)
add_subdirectory(leetcode/sorting)
add_subdirectory(leetcode/string)
add_subdirectory(leetcode/tree)
add_subdirectory(leetcode/trie)
add_subdirectory(leetcode/utils)
