add_executable(beautiful-arrangement-ii
        beautiful-arrangement-ii.cpp
        )
add_custom_target(beautiful-arrangement-ii_run
        COMMAND beautiful-arrangement-ii
        )

add_executable(can-place-flowers
        can-place-flowers.cpp
        )
add_custom_target(can-place-flowers_run
        COMMAND can-place-flowers
        )

add_executable(candy-crush
        candy-crush.cpp
        )
add_custom_target(candy-crush_run
        COMMAND candy-crush
        )

add_executable(container-with-most-water
        container-with-most-water.cpp
        )
add_custom_target(container-with-most-water_run
        COMMAND container-with-most-water
        )

add_executable(contains-duplicate-ii
        contains-duplicate-ii.cpp
        )
add_custom_target(contains-duplicate-ii_run
        COMMAND contains-duplicate-ii
        )

add_executable(contains-duplicate-iii
        contains-duplicate-iii.cpp
        )
add_custom_target(contains-duplicate-iii_run
        COMMAND contains-duplicate-iii
        )

add_executable(contiguous-array
        contiguous-array.cpp
        )
add_custom_target(contiguous-array_run
        COMMAND contiguous-array
        )

add_executable(continuous-subarray-sum
        continuous-subarray-sum.cpp
        )
add_custom_target(continuous-subarray-sum_run
        COMMAND continuous-subarray-sum
        )

add_executable(daily-temperatures
        daily-temperatures.cpp
        )
add_custom_target(daily-temperatures_run
        COMMAND daily-temperatures
        )

add_executable(evaluate-reverse-polish-notation
        evaluate-reverse-polish-notation.cpp
        )
add_custom_target(evaluate-reverse-polish-notation_run
        COMMAND evaluate-reverse-polish-notation
        )

add_executable(find-all-duplicates-in-an-array
        find-all-duplicates-in-an-array.cpp
        )
add_custom_target(find-all-duplicates-in-an-array_run
        COMMAND find-all-duplicates-in-an-array
        )

add_executable(find-all-numbers-disappeared-in-an-array
        find-all-numbers-disappeared-in-an-array.cpp
        )
add_custom_target(find-all-numbers-disappeared-in-an-array_run
        COMMAND find-all-numbers-disappeared-in-an-array
        )

add_executable(find-anagram-mappings
        find-anagram-mappings.cpp
        )
add_custom_target(find-anagram-mappings_run
        COMMAND find-anagram-mappings
        )

add_executable(find-peak-element
        find-peak-element.cpp
        )
add_custom_target(find-peak-element_run
        COMMAND find-peak-element
        )

add_executable(find-the-celebrity
        find-the-celebrity.cpp
        )
add_custom_target(find-the-celebrity_run
        COMMAND find-the-celebrity
        )

add_executable(first-missing-positive
        first-missing-positive.cpp
        )
add_custom_target(first-missing-positive_run
        COMMAND first-missing-positive
        )

add_executable(flatten-nested-list-iterator
        flatten-nested-list-iterator.cpp
        )
add_custom_target(flatten-nested-list-iterator_run
        COMMAND flatten-nested-list-iterator
        )

add_executable(flipping-an-image
        flipping-an-image.cpp
        )
add_custom_target(flipping-an-image_run
        COMMAND flipping-an-image
        )

add_executable(game-of-life
        game-of-life.cpp
        )
add_custom_target(game-of-life_run
        COMMAND game-of-life
        )

add_executable(h-index
        h-index.cpp
        )
add_custom_target(h-index_run
        COMMAND h-index
        )

add_executable(h-index-ii
        h-index-ii.cpp
        )
add_custom_target(h-index-ii_run
        COMMAND h-index-ii
        )

add_executable(increasing-triplet-subsequence
        increasing-triplet-subsequence.cpp
        )
add_custom_target(increasing-triplet-subsequence_run
        COMMAND increasing-triplet-subsequence
        )

add_executable(insert-interval
        insert-interval.cpp
        )
add_custom_target(insert-interval_run
        COMMAND insert-interval
        )

add_executable(k-diff-pairs-in-an-array
        k-diff-pairs-in-an-array.cpp
        )
add_custom_target(k-diff-pairs-in-an-array_run
        COMMAND k-diff-pairs-in-an-array
        )

add_executable(k-empty-slots
        k-empty-slots.cpp
        )
add_custom_target(k-empty-slots_run
        COMMAND k-empty-slots
        )

add_executable(kth-largest-element-in-an-array
        kth-largest-element-in-an-array.cpp
        )
add_custom_target(kth-largest-element-in-an-array_run
        COMMAND kth-largest-element-in-an-array
        )

add_executable(largest-number-at-least-twice-of-others
        largest-number-at-least-twice-of-others.cpp
        )
add_custom_target(largest-number-at-least-twice-of-others_run
        COMMAND largest-number-at-least-twice-of-others
        )

add_executable(largest-rectangle-in-histogram
        largest-rectangle-in-histogram.cpp
        )
add_custom_target(largest-rectangle-in-histogram_run
        COMMAND largest-rectangle-in-histogram
        )

add_executable(longest-mountain-in-array
        longest-mountain-in-array.cpp
        )
add_custom_target(longest-mountain-in-array_run
        COMMAND longest-mountain-in-array
        )

add_executable(magic-squares-in-grid
        magic-squares-in-grid.cpp
        )
add_custom_target(magic-squares-in-grid_run
        COMMAND magic-squares-in-grid
        )

add_executable(majority-element
        majority-element.cpp
        )
add_custom_target(majority-element_run
        COMMAND majority-element
        )

add_executable(max-consecutive-ones
        max-consecutive-ones.cpp
        )
add_custom_target(max-consecutive-ones_run
        COMMAND max-consecutive-ones
        )

add_executable(max-consecutive-ones-ii
        max-consecutive-ones-ii.cpp
        )
add_custom_target(max-consecutive-ones-ii_run
        COMMAND max-consecutive-ones-ii
        )

add_executable(maximize-distance-to-closest-person
        maximize-distance-to-closest-person.cpp
        )
add_custom_target(maximize-distance-to-closest-person_run
        COMMAND maximize-distance-to-closest-person
        )

add_executable(maximum-average-subarray-i
        maximum-average-subarray-i.cpp
        )
add_custom_target(maximum-average-subarray-i_run
        COMMAND maximum-average-subarray-i
        )

add_executable(maximum-average-subarray-ii
        maximum-average-subarray-ii.cpp
        )
add_custom_target(maximum-average-subarray-ii_run
        COMMAND maximum-average-subarray-ii
        )

add_executable(maximum-product-of-three-numbers
        maximum-product-of-three-numbers.cpp
        )
add_custom_target(maximum-product-of-three-numbers_run
        COMMAND maximum-product-of-three-numbers
        )

add_executable(maximum-product-of-word-lengths
        maximum-product-of-word-lengths.cpp
        )
add_custom_target(maximum-product-of-word-lengths_run
        COMMAND maximum-product-of-word-lengths
        )

add_executable(maximum-product-subarray
        maximum-product-subarray.cpp
        )
add_custom_target(maximum-product-subarray_run
        COMMAND maximum-product-subarray
        )

add_executable(maximum-size-subarray-sum-equals-k
        maximum-size-subarray-sum-equals-k.cpp
        )
add_custom_target(maximum-size-subarray-sum-equals-k_run
        COMMAND maximum-size-subarray-sum-equals-k
        )

add_executable(maximum-subarray
        maximum-subarray.cpp
        )
add_custom_target(maximum-subarray_run
        COMMAND maximum-subarray
        )

add_executable(maximum-swap
        maximum-swap.cpp
        )
add_custom_target(maximum-swap_run
        COMMAND maximum-swap
        )

add_executable(median-of-two-sorted-arrays
        median-of-two-sorted-arrays.cpp
        )
add_custom_target(median-of-two-sorted-arrays_run
        COMMAND median-of-two-sorted-arrays
        )

add_executable(merge-intervals
        merge-intervals.cpp
        )
add_custom_target(merge-intervals_run
        COMMAND merge-intervals
        )

add_executable(merge-sorted-array
        merge-sorted-array.cpp
        )
add_custom_target(merge-sorted-array_run
        COMMAND merge-sorted-array
        )

add_executable(missing-number
        missing-number.cpp
        )
add_custom_target(missing-number_run
        COMMAND missing-number
        )

add_executable(missing-ranges
        missing-ranges.cpp
        )
add_custom_target(missing-ranges_run
        COMMAND missing-ranges
        )

add_executable(next-permutation
        next-permutation.cpp
        )
add_custom_target(next-permutation_run
        COMMAND next-permutation
        )

add_executable(non-decreasing-array
        non-decreasing-array.cpp
        )
add_custom_target(non-decreasing-array_run
        COMMAND non-decreasing-array
        )

add_executable(number-of-boomerangs
        number-of-boomerangs.cpp
        )
add_custom_target(number-of-boomerangs_run
        COMMAND number-of-boomerangs
        )

add_executable(pascals-triangle
        pascals-triangle.cpp
        )
add_custom_target(pascals-triangle_run
        COMMAND pascals-triangle
        )

add_executable(pascals-triangle-ii
        pascals-triangle-ii.cpp
        )
add_custom_target(pascals-triangle-ii_run
        COMMAND pascals-triangle-ii
        )

add_executable(plus-one
        plus-one.cpp
        )
add_custom_target(plus-one_run
        COMMAND plus-one
        )

add_executable(positions-of-large-groups
        positions-of-large-groups.cpp
        )
add_custom_target(positions-of-large-groups_run
        COMMAND positions-of-large-groups
        )

add_executable(pour-water
        pour-water.cpp
        )
add_custom_target(pour-water_run
        COMMAND pour-water
        )

add_executable(product-of-array-except-self
        product-of-array-except-self.cpp
        )
add_custom_target(product-of-array-except-self_run
        COMMAND product-of-array-except-self
        )

add_executable(range-addition
        range-addition.cpp
        )
add_custom_target(range-addition_run
        COMMAND range-addition
        )

add_executable(relative-ranks
        relative-ranks.cpp
        )
add_custom_target(relative-ranks_run
        COMMAND relative-ranks
        )

add_executable(sentence-similarity
        sentence-similarity.cpp
        )
add_custom_target(sentence-similarity_run
        COMMAND sentence-similarity
        )

add_executable(sentence-similarity-ii
        sentence-similarity-ii.cpp
        )
add_custom_target(sentence-similarity-ii_run
        COMMAND sentence-similarity-ii
        )

add_executable(shortest-unsorted-continuous-subarray
        shortest-unsorted-continuous-subarray.cpp
        )
add_custom_target(shortest-unsorted-continuous-subarray_run
        COMMAND shortest-unsorted-continuous-subarray
        )

add_executable(shortest-word-distance
        shortest-word-distance.cpp
        )
add_custom_target(shortest-word-distance_run
        COMMAND shortest-word-distance
        )

add_executable(shortest-word-distance-iii
        shortest-word-distance-iii.cpp
        )
add_custom_target(shortest-word-distance-iii_run
        COMMAND shortest-word-distance-iii
        )

add_executable(sliding-window-maximum
        sliding-window-maximum.cpp
        )
add_custom_target(sliding-window-maximum_run
        COMMAND sliding-window-maximum
        )

add_executable(sort-a-stack-using-a-temporary-stack
        sort-a-stack-using-a-temporary-stack.cpp
        )
add_custom_target(sort-a-stack-using-a-temporary-stack_run
        COMMAND sort-a-stack-using-a-temporary-stack
        )

add_executable(sort-colors
        sort-colors.cpp
        )
add_custom_target(sort-colors_run
        COMMAND sort-colors
        )

add_executable(spiral-matrix
        spiral-matrix.cpp
        )
add_custom_target(spiral-matrix_run
        COMMAND spiral-matrix
        )

add_executable(spiral-matrix-ii
        spiral-matrix-ii.cpp
        )
add_custom_target(spiral-matrix-ii_run
        COMMAND spiral-matrix-ii
        )

add_executable(split-array-with-equal-sum
        split-array-with-equal-sum.cpp
        )
add_custom_target(split-array-with-equal-sum_run
        COMMAND split-array-with-equal-sum
        )

add_executable(subarray-product-less-than-k
        subarray-product-less-than-k.cpp
        )
add_custom_target(subarray-product-less-than-k_run
        COMMAND subarray-product-less-than-k
        )

add_executable(subarray-sum-equals-k
        subarray-sum-equals-k.cpp
        )
add_custom_target(subarray-sum-equals-k_run
        COMMAND subarray-sum-equals-k
        )

add_executable(summary-ranges
        summary-ranges.cpp
        )
add_custom_target(summary-ranges_run
        COMMAND summary-ranges
        )

add_executable(third-maximum-number
        third-maximum-number.cpp
        )
add_custom_target(third-maximum-number_run
        COMMAND third-maximum-number
        )

add_executable(three-sum
        three-sum.cpp
        )
add_custom_target(three-sum_run
        COMMAND three-sum
        )

add_executable(three-sum-smaller
        three-sum-smaller.cpp
        )
add_custom_target(three-sum-smaller_run
        COMMAND three-sum-smaller
        )

add_executable(toeplitz-matrix
        toeplitz-matrix.cpp
        )
add_custom_target(toeplitz-matrix_run
        COMMAND toeplitz-matrix
        )

add_executable(trapping-rain-water
        trapping-rain-water.cpp
        )
add_custom_target(trapping-rain-water_run
        COMMAND trapping-rain-water
        )

add_executable(two-sum
        two-sum.cpp
        )
add_custom_target(two-sum_run
        COMMAND two-sum
        )

add_executable(valid-tic-tac-toe-state
        valid-tic-tac-toe-state.cpp
        )
add_custom_target(valid-tic-tac-toe-state_run
        COMMAND valid-tic-tac-toe-state
        )

add_executable(valid-triangle-number
        valid-triangle-number.cpp
        )
add_custom_target(valid-triangle-number_run
        COMMAND valid-triangle-number
        )

add_executable(wiggle-sort
        wiggle-sort.cpp
        )
add_custom_target(wiggle-sort_run
        COMMAND wiggle-sort
        )

add_executable(wiggle-sort-ii
        wiggle-sort-ii.cpp
        )
add_custom_target(wiggle-sort-ii_run
        COMMAND wiggle-sort-ii
        )

add_executable(triggering_run_array
        ../triggering_run.cpp
        )

add_dependencies(triggering_run_array
        beautiful-arrangement-ii_run
        can-place-flowers_run
        candy-crush_run
        container-with-most-water_run
        contains-duplicate-ii_run
        contains-duplicate-iii_run
        contiguous-array_run
        continuous-subarray-sum_run
        daily-temperatures_run
        evaluate-reverse-polish-notation_run
        find-all-duplicates-in-an-array_run
        find-all-numbers-disappeared-in-an-array_run
        find-anagram-mappings_run
        find-peak-element_run
        find-the-celebrity_run
        first-missing-positive_run
        flatten-nested-list-iterator_run
        flipping-an-image_run
        game-of-life_run
        h-index_run
        h-index-ii_run
        increasing-triplet-subsequence_run
        insert-interval_run
        k-diff-pairs-in-an-array_run
        k-empty-slots_run
        kth-largest-element-in-an-array_run
        largest-number-at-least-twice-of-others_run
        largest-rectangle-in-histogram_run
        longest-mountain-in-array_run
        magic-squares-in-grid_run
        majority-element_run
        max-consecutive-ones_run
        max-consecutive-ones-ii_run
        maximize-distance-to-closest-person_run
        maximum-average-subarray-i_run
        maximum-average-subarray-ii_run
        maximum-product-of-three-numbers_run
        maximum-product-of-word-lengths_run
        maximum-product-subarray_run
        maximum-size-subarray-sum-equals-k_run
        maximum-subarray_run
        maximum-swap_run
        median-of-two-sorted-arrays_run
        merge-intervals_run
        merge-sorted-array_run
        missing-number_run
        missing-ranges_run
        next-permutation_run
        non-decreasing-array_run
        number-of-boomerangs_run
        pascals-triangle_run
        pascals-triangle-ii_run
        plus-one_run
        positions-of-large-groups_run
        pour-water_run
        product-of-array-except-self_run
        range-addition_run
        relative-ranks_run
        sentence-similarity_run
        sentence-similarity-ii_run
        shortest-unsorted-continuous-subarray_run
        shortest-word-distance_run
        shortest-word-distance-iii_run
        sliding-window-maximum_run
        sort-a-stack-using-a-temporary-stack_run
        sort-colors_run
        spiral-matrix_run
        spiral-matrix-ii_run
        split-array-with-equal-sum_run
        subarray-product-less-than-k_run
        subarray-sum-equals-k_run
        summary-ranges_run
        third-maximum-number_run
        three-sum_run
        three-sum-smaller_run
        toeplitz-matrix_run
        trapping-rain-water_run
        two-sum_run
        valid-tic-tac-toe-state_run
        valid-triangle-number_run
        wiggle-sort_run
        wiggle-sort-ii_run
        )
